# QuadSocialNavigation

conformal_social_vae/: data.py  main.py  requirements.txt  run_test.py  show_eth_animation.py  utils.py
conformal_social_vae/config/: eth.py
social_vae_cpp_ws/: README.md  json_message_example.yaml
social_vae_cpp_ws/src/social_msgs/: CMakeLists.txt  package.xml
social_vae_cpp_ws/src/social_msgs/msg/: AgentState.msg  AgentStateArray.msg  PredictedPath.msg  PredictedPathArray.msg
social_vae_cpp_ws/src/social_pipeline_node/: CMakeLists.txt  package.xml
social_vae_cpp_ws/src/social_pipeline_node/include/social_pipeline_node/: predictor.hpp
social_vae_cpp_ws/src/social_pipeline_node/src/: agent_publisher_node.cpp  data_cleaner_node.cpp  inspect_json.cpp  predictor.cpp  read_obstacles.cpp  state_processor_node.cpp  state_processor_node.txt  visualizer_node.cpp  visualizer_node.txt
social_vae_plus/: CMakeLists.txt
social_vae_plus/include/social_vae_plus/: animator.hpp  dataloader.hpp  predictor.hpp
social_vae_plus/scripts/: export_model.py
social_vae_plus/src/: animator.cpp  dataloader.cpp  main.cpp  predictor.cpp
src/gazebo_obstacles/: package.xml  setup.cfg  setup.py
src/gazebo_obstacles/gazebo_obstacles/scripts/: actor_tracker.py  cv_prediction_node.py  obstacle_mover.py  prediction_node.py  trajectory_plotter.py
src/gazebo_obstacles/launch/: start_cafe_world.launch.py  start_obstacle_world.launch.py
src/gazebo_obstacles/models/moving_cylinder/: model.sdf
src/gazebo_obstacles/worlds/: cafe.world  obstacle_world.world
src/human_nav_project/: CMakeLists.txt  package.xml
src/human_nav_project/launch/: start_dynamic_navigation.launch.py  start_dynamic_world.launch.py
src/human_nav_project/worlds/: my_dynamic_world.world
